--- a/src/app/pages/events-overview/style.scss
+++ b/src/app/pages/events-overview/style.scss
@@ -25,10 +25,18 @@ main {
     .overview {
         .event {
             @include card-container;
+            max-width:ms(7);
+            margin: 0 auto;
+            margin-bottom:ms(2);
+            
             h3,
             .text,
             .bottom {
                 padding: 0 ms(0);
+            }
+            
+            img.top {
+                width:100%;
             }
             .bottom {
                 padding-bottom: ms(0);
@@ -40,9 +48,18 @@ main {
                 }
                 img {
                    float: right;
-
                 }
             }
+        }
+        
+        @include bp(medium){
+            display: grid;
+            grid-template-columns: auto auto;
+            grid-column-gap: ms(0);
+            
+        }
+        @include bp(large){
+            grid-template-columns: auto auto auto;
         }
     }
 }
