--- a/src/app/pages/events-overview/style.scss
+++ b/src/app/pages/events-overview/style.scss
@@ -11,7 +11,15 @@
     background: linear-gradient(to right, rgba(255, 126, 21, 1) 0%, rgba(228, 87, 36, 1) 100%);
     width: 100%;
     height: 150px;
+    display:none;
+    
+    
+    @include bp(medium) {
+         display:block;
+
+        }
 }
+
 
 
 main {
