--- a/src/app/pages/events-overview/style.scss
+++ b/src/app/pages/events-overview/style.scss
@@ -39,6 +39,7 @@ main {
             margin: 0 auto;
             margin-bottom: ms(2);
             box-shadow: 0 0 5px -2px black;
+            border-radius: 25px;
 
             &:hover {
                 box-shadow: 0 0 10px -2px black;
