--- a/src/app/pages/events-overview/style.scss
+++ b/src/app/pages/events-overview/style.scss
@@ -11,13 +11,13 @@
     background: linear-gradient(to right, rgba(255, 126, 21, 1) 0%, rgba(228, 87, 36, 1) 100%);
     width: 100%;
     height: 150px;
-    display:none;
-    
-    
-    @include bp(medium) {
-         display:block;
+    display: none;
 
-        }
+
+    @include bp(medium) {
+        display: block;
+
+    }
 }
 
 
@@ -38,11 +38,12 @@ main {
             max-width: ms(7);
             margin: 0 auto;
             margin-bottom: ms(2);
-            box-shadow: 0 0 5px -2px black;
+            box-shadow: 0 0 5px #515151;
+            transition: box-shadow 0.3s;
             border-radius: 15px;
 
             &:hover {
-                box-shadow: 0 0 10px -2px black;
+                box-shadow: 0 0 20px #515151;
             }
 
             h3,
@@ -85,4 +86,3 @@ main {
         }
     }
 }
- 
