--- a/src/app/pages/events/sem/template.pug
+++ b/src/app/pages/events/sem/template.pug
@@ -26,7 +26,8 @@
 
 .schedule
     h2 Agenda
-
+    i Check out the pdf of the entire programme <a href="/assets/sem/agenda_full.pdf" target="_blank">here!</a>
+    br
     input#tab1(type="radio" name="tabs" checked)
     label(for="tab1") Kick-off (Workshop 1)
 
