--- a/src/app/pages/events/sem/template.pug
+++ b/src/app/pages/events/sem/template.pug
@@ -50,6 +50,7 @@
                 br
                 | Theil CT-1 (C building)
             p Listen to inspirational talks on our SEM themes: Circular Economy & Sustainability, Sharing Economy, Social Development & Challenges. After that, a workshop on idea generation will follow where you can learn about social innovation and build your changemaking idea.
+            i Check out the full Kick-off agenda <a href="/assets/sem/agenda_w1.pdf" target="_blank">here!</a>
         figure.tint
             img(src='{{ ws1 | cd:"w_400,c_fill"}}')
 
@@ -63,6 +64,7 @@
                 br
                 | Theil CT-6 (C building)
             p Work on the most foundational tool for your enterprise: the social business model canvas. Identify your value proposition and develop a sustainable marketing strategy for your social enterprise idea.
+            i Check out the full Workshop 2 agenda <a href="/assets/sem/agenda_w2.pdf" target="_blank">here!</a>
         figure.tint
             img(src='{{ ws2 | cd:"w_400,c_fill"}}')
 
@@ -76,6 +78,7 @@
                 br
                 | Theil CB-4 (C building)
             p Build the finance model of your enterprise by outlining your cost and revenue structure. Gain the tools that will help you craft that perfect pitch before the final of SEM.
+            i Check out the full Workshop 3 agenda <a href="/assets/sem/agenda_w3.pdf" target="_blank">here!</a>
         figure.tint
             img(src='{{ ws3 | cd:"w_400,c_fill"}}')
 
@@ -89,6 +92,7 @@
                 br
                 | ECE Campus
             p Present your idea to a jury of experts. Compete in a final pitch battle between all teams to win the grand prize: free participation in ECE’s startup programme Get Started! Work with experienced entrepreneurs and investors there to grow your entrepreneurial skills.
+            i Check out the full Final agenda <a href="/assets/sem/agenda_w4.pdf" target="_blank">here!</a>
         figure.tint
             img(src='{{ ws4 | cd:"w_400,c_fill"}}')
 
