--- a/src/app/pages/homepage/template.pug
+++ b/src/app/pages/homepage/template.pug
@@ -41,7 +41,7 @@
 
 
 #partners.container-fluid
-    h1 Our Partners
+    h1 Our Partners & Collaborations include:
     ul
         li(*ngFor="let item of partners")
             img(src='{{ "pages/front/"+item+".svg" | cd:"w_300,c_fill"}}')
