--- a/src/app/pages/event-page/template.pug
+++ b/src/app/pages/event-page/template.pug
@@ -1,13 +1,25 @@
-ng-container(*ngIf="event?.event_header")
-    .container([style.background-image]="'url(https://res.cloudinary.com/ece/image/upload/f_auto,q_auto/' + event.event_header.background + ')'")
+ng-container(*ngIf="event?.header")
+    .container([style.background-image]="'url(https://res.cloudinary.com/ece/image/upload/f_auto,q_auto/' + event.header.background + ')'")
         .wrapper
-            img(src='{{ event.event_header.logo | cd:"w_1200,c_fill"}}')
-            ng-container(*ngFor="let tl of event.event_header.taglines")
+            img(src='{{ event.header.logo | cd:"w_1200,c_fill"}}')
+            ng-container(*ngFor="let tl of event.header.taglines")
                 h2(*ngIf="tl.large") {{tl.text}}
                 h4(*ngIf="!tl.large") {{tl.text}}
-            h3 {{ event.event_header.date }}
-//{{ event.event_header.background | cd:"c_scale,w_1920"}}
-.event-header(*ngIf="event?.event_about")
-    h2 {{ event?.event_about?.title }}
-    div([innerHtml]="event?.event_about?.body")
-    a(routerLink="{{event?.event_about?.link?.route}}") check out {{event?.event_about?.link?.label}}
+            h3 {{ event.header.date }}
+
+ng-container(*ngIf="event?.about")
+    .about
+        h2 {{ event.about.title }}
+        div.left
+            img(src='{{ event.about.img | cd:"w_300,c_fill"}}')
+        div.right
+            p(*ngFor="let p of event.about.paragraphs") {{p}}
+            span(*ngFor="let t of event.about.bottom_taglines") {{t}}
+
+ng-container(*ngIf="event?.signup")
+    .signup([style.background-color]="event.signup.color")
+        div
+            h2 {{ event.signup.tagline }}
+            .right
+                a(href="{{ event.signup.link }}")
+                    button Sign Up
