--- a/src/app/pages/event-page/style.scss
+++ b/src/app/pages/event-page/style.scss
@@ -113,6 +113,8 @@ p {
 
 .schedule {
     i {
+        float: left;
+        width: 100%;
         font-size: ms(0);
         color: grey;
         a {
