--- a/src/app/pages/events/24hbg/template.pug
+++ b/src/app/pages/events/24hbg/template.pug
@@ -1,2 +1,154 @@
 //put the menu somewhere in the page
 app-main-menu
+.container
+    .wrapper
+        h1 Need another longer tagline
+        h2 Business never sleeps.
+        h3 THE 24 HOUR BUSINESS GAME START IN
+        button(type='submit')
+            a(href="#") SIGN UP
+
+.about
+    h2 ECE STUDENTS’ 24 HOUR BUSINESS GAME IS BACK!
+    p 24 Hour Business Game is a sleepless business competition where we aim at helping entrepreneurial students to conceptualize their business ideas. During the challenge, over 150 students, guided by experienced executives, form teams and create their own business plans for the final pitch. All in 24 hours! Judges select the best team, which will receive a grand prize! 
+    p The event is taking place at THE Dutch entrepreneurial hub, the ECE Campus in the Rotterdam Science Tower.
+    span 11/12 MAY 2018 | 14:00
+    span MARCONISTRAAT 16
+    span ECE CAMPUS
+    button(type='submit')
+        a(href="https://ecestudents2017.typeform.com/to/t970kV") Sign Up.
+        
+.past
+    h2 PAST YEARS' NUMBERS:
+    .left
+        .numbers
+            div
+                span.bold >30K
+                br 
+                | Reach on Social Media Channels
+            div
+                span.bold > 50 Firms
+                br 
+                | Participated in 24HBG since 2013
+            div
+                span.bold > 500 Students
+                br 
+                | Participated in 24HBG since 2013
+        h3 In previous editions, we have welcomed participants from:
+        ul.unis
+            li Erasmus University Rotterdam 
+            li Rotterdam School of Management
+            li Hogeschool Rotterdam 
+            li TU Delft
+        h3 With a wide range of backgrounds:
+        ul.studies
+            li Engineering 
+            li Business 
+            li Economics 
+            li Entrepreneurship 
+            li Innovation
+    .right
+
+.agenda
+    .wrapper
+        h2 SCHEDULE
+        div.orange
+            span.bold @ECE Campus
+            br
+            | ROTTERDAM SCIENCE TOWER, 11th floor
+            br
+            | Marconistraat 16, 3029 AK
+            br
+            | Rotterdam
+        .left
+            h3 DAY 1 
+        .right
+            h3 DAY 2
+        button(type='submit')
+            a(href="#") SIGN UP
+
+.sponsors
+    h2 PREVIOUS SPONSORS
+    .sponsor-grid images
+    
+.speakers
+    .logo logo
+    p 
+        | The 2018 edition of the 
+        span.bold 24 hour business game 
+        | will take place in the Rotterdam Science Tower, heart of the Rotterdam's entrepreneurial spirit , on 
+        span.bol May 12th and 13th.
+    .speakers-grid
+        h2 speakers
+        .img
+        .text
+            | CHRIS
+            br
+            | OUT
+            br
+            span Managing Partner & Lead Growth Hacker
+            br
+            span RockBoost
+        .img
+        .text
+            | CHRIS
+            br
+            | OUT
+            br
+            span Managing Partner & Lead Growth Hacker
+            br
+            span RockBoost
+        h2 judges
+        .img
+        .text
+            | CHRIS
+            br
+            | OUT
+            br
+            span Managing Partner & Lead Growth Hacker
+            br
+            span RockBoost
+        .img
+        .text
+            | CHRIS
+            br
+            | OUT
+            br
+            span Managing Partner & Lead Growth Hacker
+            br
+            span RockBoost
+//.video
+
+.map
+    button(type='submit')
+        a(href="#") SIGN UP
+
+.contact
+    h2 
+        | Want to know  more?
+        br
+        | Get in touch
+    .icon
+    .person
+        | img
+        br
+        span.orange Christoph Dvorak
+        br
+        | christoph.dvorak@ecestudents.com
+        br
+        | +43 650 86 44 450
+        
+    .person
+        |img
+        br
+        span.orange Maud Hascoët
+        br
+        | maud.hascoet@ecestudents.com
+        br
+        | +31 6 10 81 21 97
+    
+    .social
+        |Check our 
+        span.light Facebook page
+        | to know more about the previous editions of the event!
+app-footer
