--- a/src/app/pages/events/idealab/template.pug
+++ b/src/app/pages/events/idealab/template.pug
@@ -57,3 +57,4 @@
             span.heart(*appTimes="item.number")
             .message "{{ item.message }}"
             .person {{ item.person }}
+app-footer
