--- a/src/app/pages/events/sem/template.pug
+++ b/src/app/pages/events/sem/template.pug
@@ -114,3 +114,4 @@
 //             span.heart(*appTimes="item.number")
 //             .message "{{ item.message }}"
 //             .person {{ item.person }}
+app-footer
