--- a/src/app/pages/events/ubc/template.pug
+++ b/src/app/pages/events/ubc/template.pug
@@ -47,3 +47,4 @@
     ul
         li(*ngFor="let item of partners")
             img(src='{{ "pages/unilever/"+item | cd:"w_300,c_fill"}}')
+app-footer
