--- a/src/app/pages/events/ic/template.pug
+++ b/src/app/pages/events/ic/template.pug
@@ -45,6 +45,4 @@
             span.heart(*appTimes="item.number")
             .message "{{ item.message }}"
             .person {{ item.person }}
-
-
-
+app-footer
