--- a/src/main.scss
+++ b/src/main.scss
@@ -106,6 +106,11 @@ body {
   font-family: MuseoSans;
 }
 
+a {
+  color: $ece-blue;
+  text-decoration: none; /* no underline */
+}
+
 ::selection {
   background: $ece-orange;
   /* WebKit/Blink Browsers */
